[package]
name = "skym"
version = "0.1.0"
edition = "2021"

[lib]
name = "skym"
crate-type = ["cdylib"]

[dependencies]
skim = "0.16.1"

[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
