[package]
name = "skym"
version = "0.1.0"
edition = "2021"

[lib]
name = "skym"
crate-type = ["cdylib", "rlib"]

[dependencies]
fuzzy-matcher = "0.3.7"
skim = "0.16.1"

[dependencies.pyo3]
version = "0.24.1"
features = ["abi3-py38"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "fuzzy_bench"
harness = false
